@@ -710,7 +710,7 @@ ACE_InputCDR::ACE_InputCDR (const char *buf,
                             ACE_CDR::Octet minor_version)
   : start_ (buf, bufsiz),
     do_byte_swap_ (byte_order != ACE_CDR_BYTE_ORDER),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (major_version),
     minor_version_ (minor_version),
     char_translator_ (0),
@@ -725,7 +725,7 @@ ACE_InputCDR::ACE_InputCDR (size_t bufsiz,
                             ACE_CDR::Octet minor_version)
   : start_ (bufsiz),
     do_byte_swap_ (byte_order != ACE_CDR_BYTE_ORDER),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (major_version),
     minor_version_ (minor_version),
     char_translator_ (0),
@@ -739,7 +739,7 @@ ACE_InputCDR::ACE_InputCDR (const ACE_Message_Block *data,
                             ACE_CDR::Octet minor_version,
                             ACE_Lock* lock)
 : start_ (0, ACE_Message_Block::MB_DATA, 0, 0, 0, lock),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (major_version),
     minor_version_ (minor_version),
     char_translator_ (0),
@@ -756,7 +756,7 @@ ACE_InputCDR::ACE_InputCDR (ACE_Data_Block *data,
                             ACE_CDR::Octet minor_version)
   : start_ (data, flag),
     do_byte_swap_ (byte_order != ACE_CDR_BYTE_ORDER),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (major_version),
     minor_version_ (minor_version),
     char_translator_ (0),
@@ -774,7 +774,7 @@ ACE_InputCDR::ACE_InputCDR (ACE_Data_Block *data,
                             ACE_CDR::Octet minor_version)
   : start_ (data, flag),
     do_byte_swap_ (byte_order != ACE_CDR_BYTE_ORDER),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (major_version),
     minor_version_ (minor_version),
     char_translator_ (0),
@@ -800,7 +800,7 @@ ACE_InputCDR::ACE_InputCDR (const ACE_InputCDR& rhs,
   : start_ (rhs.start_,
             ACE_CDR::MAX_ALIGNMENT),
     do_byte_swap_ (rhs.do_byte_swap_),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (rhs.major_version_),
     minor_version_ (rhs.minor_version_),
     char_translator_ (rhs.char_translator_),
@@ -834,7 +834,7 @@ ACE_InputCDR::ACE_InputCDR (const ACE_InputCDR& rhs,
   : start_ (rhs.start_,
             ACE_CDR::MAX_ALIGNMENT),
     do_byte_swap_ (rhs.do_byte_swap_),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (rhs.major_version_),
     minor_version_ (rhs.minor_version_),
     char_translator_ (rhs.char_translator_),
@@ -873,7 +873,7 @@ ACE_InputCDR::ACE_InputCDR (const ACE_InputCDR& rhs)
   : start_ (rhs.start_,
             ACE_CDR::MAX_ALIGNMENT),
     do_byte_swap_ (rhs.do_byte_swap_),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (rhs.major_version_),
     minor_version_ (rhs.minor_version_),
     char_translator_ (rhs.char_translator_),
@@ -895,7 +895,7 @@ ACE_InputCDR::ACE_InputCDR (const ACE_InputCDR& rhs)
 ACE_InputCDR::ACE_InputCDR (ACE_InputCDR::Transfer_Contents x)
   : start_ (x.rhs_.start_.data_block ()),
     do_byte_swap_ (x.rhs_.do_byte_swap_),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (x.rhs_.major_version_),
     minor_version_ (x.rhs_.minor_version_),
     char_translator_ (x.rhs_.char_translator_),
@@ -942,7 +942,7 @@ ACE_InputCDR::ACE_InputCDR (const ACE_OutputCDR& rhs,
             data_block_allocator,
             message_block_allocator),
     do_byte_swap_ (rhs.do_byte_swap_),
-    good_bit_ (1),
+    good_bit_ (true),
     major_version_ (rhs.major_version_),
     minor_version_ (rhs.minor_version_),
     char_translator_ (rhs.char_translator_),
